Removed Local FontAwesome, added collabs past and lives, added seperate video tabs, fixed logo on mobile

--- a/staticfiles/home/css/home.css
+++ b/staticfiles/home/css/home.css
@@ -7,12 +7,12 @@ html {
 }
 
 /* Add a hover effect if you want */
-.fa-brands:hover {
+.fab:hover {
     opacity: 0.7;
   }
 
 /* Style all font awesome icons */
-.fa-brands {
+.fab {
     padding-left: 60px;
     padding-right: 60px;
     width: 50px;
